@@ -191,7 +191,7 @@ statistics in an integrated way.</p>
     </div>
     <div class="footer">
         &copy; Copyright 2008, Peter Bienstman.
-      Last updated on Aug 13, 2012.
+      Last updated on Aug 16, 2012.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
   </body>
