@@ -4,6 +4,7 @@
 
 from PyQt4 import QtCore, QtGui
 
+from mnemosyne.libmnemosyne.translator import _
 from mnemosyne.libmnemosyne.component import Component
 from mnemosyne.pyqt_ui.ui_change_card_type_dlg import Ui_ChangeCardTypeDlg
 
@@ -23,8 +24,8 @@ class ChangeCardTypeDlg(QtGui.QDialog, Ui_ChangeCardTypeDlg, Component):
         self.return_values = return_values
         for card_type in self.card_types():
             if card_type != current_card_type:
-                self.card_type_by_name[card_type.name] = card_type
-                self.card_types_widget.addItem(card_type.name)
+                self.card_type_by_name[_(card_type.name)] = card_type
+                self.card_types_widget.addItem(_(card_type.name))
 
     def accept(self):
         card_type_name = unicode(self.card_types_widget.currentText())
